# mutheors

./: .gitignore  Cargo.toml  README.md  build-ffi.sh  uniffi-bindgen.rs
.github/workflows/: ci.yml
examples/: fretboard_demo.rs  preset_demo.rs  special_techniques_demo.rs  visualization_demo.rs
src/: lib.rs  uniffi_binding.rs
src/audio/: chord_detect.rs  chroma.rs  cqt.rs  fft.rs  key.rs  mod.rs  onset.rs  yin.rs
src/composition/: measure.rs  mod.rs  score.rs  tempo.rs  track.rs
src/core/: duration.rs  errors.rs  interval.rs  macros.rs  mod.rs  note.rs  scale.rs  tuning.rs
src/core/chord/: mod.rs  parser.rs  quality.rs
src/fret/: continuous.rs  errors.rs  extensions.rs  fingering.rs  integration_tests.rs  keyboard.rs  mod.rs  presets.rs  stringed.rs  traits.rs  types.rs  visualization.rs  voice_leading.rs
src/midi/: midi_player.rs  mod.rs
src/tests/: utils.rs
tests/: audio_e2e.rs  onset_e2e.rs  test0.rs  test1.rs  test_midi.rs
xtask/src/: main.rs
