[package]
name = "mutheors"
version = "0.2.0"
edition = "2021"
authors = ["Benign X <1341398182@qq.com>"]
description = "Music theory library — pitch, interval, chord, scale, composition, fretboard, audio analysis"
license = "MIT"
repository = "https://github.com/w-mai/mutheors"
homepage = "https://benign.host"
keywords = ["music", "theory", "audio", "chord", "pitch"]
categories = ["multimedia::audio", "science"]

[lib]
crate-type = ["lib", "staticlib"]
name = "mutheors"

[features]
default = []
midi_io = ["midir"]
audio = ["rustfft"]
bindgen = ["uniffi/cli", "uniffi/build"]

[dependencies]
rand = "0.9.0"
thiserror = "2.0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

midir = { version = "0.10.0", optional = true }
rustfft = { version = "6.2", optional = true }

uniffi = { version = "0.29.1", features = ["cli"], optional = true }

[dev-dependencies]
proptest = "1.4"

[build-dependencies]
uniffi = { version = "0.29.1", features = ["build"], optional = true }

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["bindgen"]


[[test]]
name = "test_midi"
required-features = ["midi_io"]

[[test]]
name = "audio_e2e"
required-features = ["audio"]

[[test]]
name = "onset_e2e"
required-features = ["audio"]

[workspace]
members = [".", "xtask"]
